# kube-flow

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: debug_log.rs  lib.rs  main.rs  ssh_askpass.rs
src-tauri/src/commands/: config_commands.rs  credential_commands.rs  env_commands.rs  kube_command_context.rs  kube_commands.rs  log_commands.rs  mod.rs  terminal_commands.rs
src-tauri/src/commands/kube/: list_commands.rs  mod.rs  resource_commands.rs  stream_commands.rs  watch_commands.rs
src-tauri/src/config/: app_settings.rs  crd_display.rs  kube_flow.rs  mod.rs  paths.rs  ssh_config.rs
src-tauri/src/credentials/: manager.rs  memory.rs  mod.rs  os_keychain.rs  stronghold.rs  types.rs
src-tauri/src/env/: mod.rs  service.rs  types.rs
src-tauri/src/kube/: client.rs  mod.rs  related_targets.rs  resource_alias_cache.rs  resource_apply.rs  resource_delete.rs  resource_describe.rs  resource_dynamic.rs  resource_exec.rs  resource_get.rs  resource_log.rs  resource_patch.rs  resource_topology.rs  resource_watch.rs  resources.rs  session_store.rs  tunnel.rs  workload_pod_rollup.rs
src-tauri/src/kube/resource_graph/: extractor.rs  mod.rs  registry.rs
src-tauri/src/kube/resource_graph/extractors/: hpa_ref.rs  ingress_backend.rs  owner_ref.rs  pod_service_link.rs  pvc_bindings.rs  rbac_refs.rs  sa_bindings_reverse.rs  selector.rs  (+5 more)
src-tauri/src/kube/resources/: batch.rs  cluster.rs  config.rs  mod.rs  networking.rs  policy.rs  rbac.rs  storage.rs  workloads.rs
(+141 files in other folders)
