[package]
name = "kube-flow"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kube_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
kube = { version = "0.91", features = ["client", "config", "runtime", "rustls-tls", "ws"], default-features = false }
k8s-openapi = { version = "0.22", features = ["v1_28"], default-features = false }
tokio = { version = "1", features = ["fs", "sync", "rt-multi-thread", "process", "io-util", "time"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
thiserror = "1"
anyhow = "1"
serde_yaml = "0.9"
ssh2 = "0.9"
shell-words = "1.1"
keyring = "3"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
libc = "0.2"
